week-infra/garage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: week-infra
  labels:
    app: garage
spec:
  type: ClusterIP
  selector:
    app: garage
  ports:
    - name: s3
      port: 3900
      targetPort: 3900
    - name: rpc
      port: 3901
      targetPort: 3901
    - name: admin
      port: 3903
      targetPort: 3903
